Fix background color correct extra spaces

--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,8 @@ html {
 }
 
 body {
-  background-color: #fff;
+  background-color: #c9b5ab;
 }
-
 
 img {
   width: 100%;
